welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: type mismatch;
 found   : Boolean(false)
 required: com.sun.org.apache.xpath.internal.operations.Bool
var vuBiscuit:Bool = false;
                     ^Program:10: error: type mismatch;
 found   : Boolean(true)
 required: com.sun.org.apache.xpath.internal.operations.Bool
		vuBiscuit = true;
                            ^Program:18: error: type mismatch;
 found   : Boolean(true)
 required: com.sun.org.apache.xpath.internal.operations.Bool
vuBiscuit = true;
            ^Program:19: error: type mismatch;
 found   : com.sun.org.apache.xpath.internal.operations.Bool
 required: Boolean
return vuBiscuit;
       ^