welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
var vuBiscuit:Bool = false;
for(i <- 1 to 7){

for(i <- 1 to 7){

	avance();
	if(estSurBiscuit()){
		vuBiscuit = true;
	}
	
}
droite();
avance();
gauche();
}
vuBiscuit = true;
return vuBiscuit;

}
